# Ludo

./: CMakeLists.txt  Doxyfile  main.cpp
Include/: Board.h  Exceptions.h  GameEntity.h  GameException.h  GameManager.h  Piece.h  PieceFactory.h  Player.h  SpecialPiece.h
docs/html/: _board_8h_source.html  _exceptions_8h_source.html  _game_entity_8h_source.html  _game_exception_8h_source.html  _game_manager_8h_source.html  _helper_8h_source.html  _piece_8h_source.html  _piece_factory_8h_source.html  _player_8h_source.html  _special_piece_8h_source.html  annotated.html  class_board-members.html  class_board.html  class_game_entity-members.html  class_game_entity.html  class_game_exception-members.html  class_game_exception.html  class_game_manager-members.html  class_game_manager.html  class_general_game_exception-members.html  class_general_game_exception.html  class_helper-members.html  class_helper.html  class_invalid_move_exception-members.html  class_invalid_move_exception.html  class_piece-members.html  class_piece.html  class_piece_factory-members.html  class_piece_factory.html  class_player-members.html  class_player.html  class_player_exception-members.html  class_player_exception.html  class_special_piece-members.html  class_special_piece.html  classes.html  dir_0de67de9667aa563ded51dd0abd5899a.html  dir_1c956553307584cb75a54d1a5c151efd.html  dir_24c9f63f161698e833b9baedb24b859b.html  dir_29493262b44f4429d52d427084ce1a91.html  (+15 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  pages_0.js  searchdata.js  variables_0.js
docs/latex/: _board_8h_source.tex  _exceptions_8h_source.tex  _game_entity_8h_source.tex  _game_exception_8h_source.tex  _game_manager_8h_source.tex  _piece_8h_source.tex  _piece_factory_8h_source.tex  _player_8h_source.tex  _special_piece_8h_source.tex  annotated.tex  class_board.tex  class_game_entity.eps  class_game_entity.tex  class_game_exception.eps  class_game_exception.tex  class_game_manager.tex  class_general_game_exception.eps  class_general_game_exception.tex  class_invalid_move_exception.eps  class_invalid_move_exception.tex  class_piece.eps  class_piece.tex  class_piece_factory.tex  class_player.tex  class_player_exception.eps  class_player_exception.tex  class_special_piece.eps  class_special_piece.tex  files.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex
src/: Board.cpp  GameManager.cpp  Piece.cpp  Player.cpp  SpecialPiece.cpp
